# match

./: CMakeLists.txt  README.md
scripts/: run-tests.sh
src/: match.cc  matcher.cc  matcher.h  test.cc
tex/: rabin-karp.tex
